--- a/app.json
+++ b/app.json
@@ -23,7 +23,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./src/assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.younes72.pokedex"
     },
     "web": {
       "favicon": "./src/assets/favicon.png"
